[package]
name = "text_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
turtle = {git = "https://github.com/sunjay/turtle", features=["unstable"]}
turtle_text = {git="https://github.com/enaut/turtle_text"}
